--- a/front/index.html
+++ b/front/index.html
@@ -77,7 +77,7 @@
             <th>Entreprise</th>
             <th>Adresse</th>
             <th>Titre</th>
-            <th>Options</th>
+            <th class="exclude-from-pdf">Options</th>
           </tr>
         </thead>
         <tbody id="tbody"></tbody>
