--- a/front/index.html
+++ b/front/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./style.css" />
     <script src="https://unpkg.com/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
     <script src="https://unpkg.com/jspdf-autotable@3.8.1/dist/jspdf.plugin.autotable.js"></script>
-    <script src="./app.js"></script>
+    <script type="module" src="app.js"></script>
+    <script type="module" src="config.js"></script>
   </head>
   <body>
     <nav>
@@ -18,6 +19,10 @@
         <div id="map"></div>
       </div>
       <div class="parameter">
+        <label for="password">Mot de passe</label>
+        <input type="password" name="password" id="password" />
+        <br />
+        <span id="passwordText"></span>
         <div class="titleParameter">
           <h3>Sélectionner vos paramètres</h3>
         </div>
@@ -48,7 +53,9 @@
             <tr>
               <td></td>
               <td>
-                <button onclick="saveParameters()">Enregistrer les modifications</button>
+                <button onclick="saveParameters(event)">
+                  Enregistrer les modifications
+                </button>
               </td>
               <td></td>
             </tr>
@@ -102,10 +109,5 @@
         <tbody id="tbody"></tbody>
       </table>
     </div>
-
-    <script
-      defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDOgFs-JgriH3ynNbEvANBEwtu8Z4U_aSA&callback=initMap"
-    ></script>
   </body>
 </html>
