--- a/front/index.html
+++ b/front/index.html
@@ -53,9 +53,7 @@
             <tr>
               <td></td>
               <td>
-                <button onclick="saveParameters(event)">
-                  Enregistrer les modifications
-                </button>
+                <button id="saveParametersButton">Enregistrer les modifications</button>
               </td>
               <td></td>
             </tr>
@@ -63,12 +61,12 @@
         </form>
         <div class="other">
           <label for="pdf">Télécharger le tableau en pdf</label>
-          <button onclick="exportToPDF()">Export PDF</button>
+          <button id="exportPDFButton">Export PDF</button>
           <table>
             <tr>
               <td><label for="banThing">Entrer un mot à bannir</label></td>
               <td><input type="text" name="banThing" id="banThing" /></td>
-              <td><button onclick="banWord()">Ban</button></td>
+              <td><button id="banWordButton">Ban</button></td>
             </tr>
           </table>
           <h3>Ajouter manuellement une entreprise</h3>
@@ -85,7 +83,7 @@
             </tr>
             <tr>
               <td></td>
-              <td><button onclick="addMyCompagny()">Ajouter l'entreprise</button></td>
+              <td><button id="addMyCompagnyButton">Ajouter l'entreprise</button></td>
               <td></td>
             </tr>
           </table>
