--- a/front/index.html
+++ b/front/index.html
@@ -13,6 +13,9 @@
   <body>
     <nav>
       <h1>SearchNgo</h1>
+      <a href="https://github.com/LucasDechaumet/searchNgo"
+        >https://github.com/LucasDechaumet/searchNgo</a
+      >"
     </nav>
     <div class="map_parameter">
       <div class="map">
