--- a/front/index.html
+++ b/front/index.html
@@ -75,12 +75,12 @@
           <h3>Ajouter manuellement une entreprise</h3>
           <table>
             <tr>
-              <td><label for="compagnyName">Entrez le nom de l'entreprise</label></td>
+              <td><label for="compagnyName">Entrer le nom de l'entreprise</label></td>
               <td><input type="text" name="compagnyName" id="compagnyName" /></td>
             </tr>
             <tr>
               <td>
-                <label for="compagnyLocation">Entrez la ville de l'entreprise</label>
+                <label for="compagnyLocation">Entrer la ville de l'entreprise</label>
               </td>
               <td><input type="text" name="compagnyLocation" id="compagnyLocation" /></td>
             </tr>
