--- a/front/index.html
+++ b/front/index.html
@@ -11,6 +11,7 @@
     <script type="module" src="config.js"></script>
   </head>
   <body>
+    <div id="whiteScreenPlace"></div>
     <nav>
       <h1>SearchNgo</h1>
       <a href="https://github.com/LucasDechaumet/searchNgo"
